@@ -1,3 +1,7 @@
+2019-06-14  Richard Biener  <rguenther@suse.de>
+
+	* gcc.dg/tree-ssa/ldist-26.c: Adjust.
+
 2019-06-14  Feng Xue  <fxue@os.amperecomputing.com>
 
 	PR ipa/90401
